--- a/real_server/api/templates/index.html
+++ b/real_server/api/templates/index.html
@@ -1,49 +1,110 @@
 <!DOCTYPE html>
+
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Mejorada</title>
+    <title>Pong mania</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/ico" href="/pong.png">
 </head>
-<body>
 
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">Mi Aplicación</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-			<textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Características</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Precios</a>
-                    </li>
-                </ul>
-            </div>
+<header>
+    <!-- Intro settings -->
+    <style>
+      /* Default height for small devices */
+      #intro-example {
+        height: 400px;
+      }
+  
+      /* Height for devices larger than 992px */
+      @media (min-width: 992px) {
+        #intro-example {
+          height: 600px;
+        }
+      }
+    </style>
+  
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-white">
+      <div class="container-fluid"> 
+        <button
+          data-mdb-collapse-init
+          class="navbar-toggler"
+          type="button"
+          data-mdb-target="#navbarExample01"
+          aria-controls="navbarExample01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarExample01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Play</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tournament</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-
-    <div class="container mt-4">
-        <div class="jumbotron">
-            <h1 class="display-4">¡Bienvenido!</h1>
-            <p class="lead">Esta es una página de ejemplo mejorada utilizando Bootstrap.</p>
-            <hr class="my-4">
-            <p>Puedes personalizar este contenido con la información de tu aplicación.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Aprende más</a>
+    <!-- Navbar -->
+  
+    <!-- Background image -->
+    <div
+      id="intro-example"
+      class="p-5 text-center bg-image"
+      
+      style="background-image: url('https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png');"
+    >
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white">
+            <h1 class="mb-3">So you think you are a pong master</h1>
+            <h5 class="mb-4">Try your best against an AI, another player or enroll a tournament</h5>
+            <a
+              data-mdb-ripple-init
+              class="btn btn-outline-light btn-lg m-2"
+              href="https://www.youtube.com/watch?v=c9B4TPnak1A"
+              role="button"
+              rel="nofollow"
+              target="_blank"
+            >Start</a
+            >
+            <a
+              data-mdb-ripple-init
+              class="btn btn-outline-light btn-lg m-2"
+              href="/register"
+              target="_self"
+              role="button"
+            >Sign in</a
+            >
+          </div>
         </div>
+      </div>
     </div>
-
-    <footer class="bg-light text-center py-3">
-        <p>&copy; 2025 Mi Aplicación</p>
-    </footer>
+    <!-- Background image -->
+  </header>
+  style="background-image: url('https://miro.medium.com/v2/resize:fit:1400/format:webp/1*dN3aerMfWAjTV7-oouEDfg.jpeg');"
+  https://arcadeblogger.com/wp-content/uploads/2022/12/317517280_10158747226862116_6613577913772582883_n.jpg
+  https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png
+<body>
+    
+    <div class="container mt-3">
+        <h1>¡Hola desde mi página simple!</h1>
+        <p class="lead">Este es un ejemplo de contenido HTML básico con Bootstrap.</p>
+        <button class="btn btn-primary">Botón Primario de Bootstrap</button>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Qi+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
