Actualización de: real_server/api/static/tournament.js real_server/api/templates/favicon.ico real_server/api/templates/index.html real_server/api/templates/register.html real_server/api/templates/tournament.html real_server/ft_transcendence_backend/settings.py real_server/ft_transcendence_backend/urls.py real_server/pages/static/images/tournament.js real_server/pages/views.py real_server/staticfiles/tournament.js  [17/04/2025 13:00]

--- a/real_server/api/templates/tournament.html
+++ b/real_server/api/templates/tournament.html
@@ -50,6 +50,7 @@
 		</div>
 		<div id="log"></div>
 
-		<script src="../../../juego/srcJS/tournament.js"></script>
+		<script src='../static/tournament.js'></script>
 	</body>
+	
 </html>
