--- a/real_server/api/templates/index.html
+++ b/real_server/api/templates/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="#">Play</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tournament</a>
+              <a class="nav-link" href="./tournament">Tournament</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
