--- a/real_server/api/templates/index.html
+++ b/real_server/api/templates/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/ico" href="/pong.png">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
+
 </head>
 
+<body>
 <header>
     <!-- Intro settings -->
     <style>
@@ -24,81 +29,59 @@
           height: 600px;
         }
       }
+      .mb-3 {
+        font-family: "Tourney", sans-serif;
+        font-size: 7rem;
+        padding-top: 8%;
+        display:flex
+      }
+      
+
     </style>
   
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-white">
-      <div class="container-fluid"> 
-        <button
-          data-mdb-collapse-init
-          class="navbar-toggler"
-          type="button"
-          data-mdb-target="#navbarExample01"
-          aria-controls="navbarExample01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Play</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tournament</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Navbar -->
+  https://images.pexels.com/photos/4836513/pexels-photo-4836513.jpeg
   
     <!-- Background image -->
     <div
       id="intro-example"
-      class="p-5 text-center bg-image"
+      class="p-5 text-center bg-image align-bottom"
       
-      style="background-image: url('https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png');"
+      style="background-image: url('https://images.pexels.com/photos/4842494/pexels-photo-4842494.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');"
     >
-      <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+     <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
         <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white">
+          <div class="text-white" style="text-decoration-color: blueviolet;">
             <h1 class="mb-3">So you think you are a pong master</h1>
-            <h5 class="mb-4">Try your best against an AI, another player or enroll a tournament</h5>
+            <h3 class="mb-4" style="font-family: Pixelify Sans, sans-serif;">Try your best against an AI, another player or enroll a tournament</h3>
             <a
               data-mdb-ripple-init
               class="btn btn-outline-light btn-lg m-2"
+              style="font-family: Pixelify Sans, sans-serif;"
               href="https://www.youtube.com/watch?v=c9B4TPnak1A"
               role="button"
               rel="nofollow"
               target="_blank"
-            >Start</a
-            >
+            >Start</a>
             <a
               data-mdb-ripple-init
               class="btn btn-outline-light btn-lg m-2"
+              style="font-family: Pixelify Sans, sans-serif;"
               href="/register"
               target="_self"
               role="button"
-            >Sign in</a
-            >
+            >Sign in</a>
           </div>
         </div>
       </div>
     </div>
     <!-- Background image -->
   </header>
-  style="background-image: url('https://miro.medium.com/v2/resize:fit:1400/format:webp/1*dN3aerMfWAjTV7-oouEDfg.jpeg');"
-  https://arcadeblogger.com/wp-content/uploads/2022/12/317517280_10158747226862116_6613577913772582883_n.jpg
+
+  <div class="row justify-content-center" style=" max-width: 100%; height: auto;; font-family: Pixelify Sans, sans-serif;" class="shadow-lm text-center">
+    <img class="img-fluid " src="https://i.postimg.cc/3xfnTQjs/D-NQ-NP-941976-MLA26076900203-092017-O.jpg" alt="arcade game">
+  </div>
+
   https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png
-<body>
     
     <div class="container mt-3">
         <h1>¡Hola desde mi página simple!</h1>
