--- a/real_server/api/templates/about.html
+++ b/real_server/api/templates/about.html
@@ -1,29 +1,52 @@
-{% load crispy_forms_tags %}
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign in form</title>
+    <title>Retropong team</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     </style>
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
     <link rel="shortcut icon" type="image/ico" href="/static/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../../staticfiles/rest_framework/css/team.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 
+<style>
+  img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  </style>
 
 <body class="bg-info bg-gradient">
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-white ">
-  <div class="container-fluid" style="color: aqua;"> 
+
+<nav class="navbar navbar-expand-lg border border-5 border-white" style="background: linear-gradient(
+  45deg,
+  hsla(168, 85%, 52%, 0.5),
+  hsla(263, 88%, 45%, 0.5) 100%
+)">
+  <div class="container-fluid" style="color: aqua; "> 
     <button
       data-mdb-collapse-init
       class="navbar-toggler"
@@ -58,30 +81,44 @@
 </nav>
 <!-- Navbar -->
 
+<div class="row " style="height: 8vw">
+    <h1 style="font-size:6vw; font-family: Tourney, sans-serif; color:aqua;" class="d-flex justify-content-center " >The Retropong team</h1>
+</div>
 
-  <div class="row " style="height: 150px;">
-    <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua; padding-top: 3%;">Sign in into Retropong</h3>
+<div class="row fit-content" style="display: flex; justify-content: space-around">
+  <div class="col text-center" style="height: 350px; max-width: 300px; font-family: Pixelify Sans, sans-serif;">
+    <h3>César Varela</h3>
+    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/53be5aefb6e0d9897f50ca4760232574/cvarela-.jpeg"  alt="joystick">
+    <p class="shadow bg-white rounded-3" >Bakcend. Monitoring survivor. src="https://ih1.redbubble.net/image.269457003.3660/raf,750x1000,075,t,FFFFFF:97ab1c12de.u3.jpg</p>
+  </div>
+  <div class="col text-center" style="height: 350px; max-width: 300px;font-family: Pixelify Sans, sans-serif;" >
+      <h3>Izar Arbaiza</h3>
+      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/3908a5634fc8a6bc0219aefba97cf8e6/iarbaiza.jpg" alt="joystick">
+      <p class="shadow bg-white rounded-3">IA gaming. Paddle algorythm. src="https://art.pixilart.com/d42430702bfd576.png"</p>
+  </div>
+
 </div>
-<div class="row  ">
-    <div class="col">
-      <img class="img-fluid justify-content-center" src="https://i.pinimg.com/474x/dd/e0/a7/dde0a784566eff4195f7cf5b29f7605d.jpg" alt="joystick">
+<br><br>
+<div class="row fit-content" style="display: flex; justify-content: space-around; margin-bottom: 8%;">
+  <div class="col text-center" style="height: 350px; max-width: 300px; font-family: Pixelify Sans, sans-serif;">
+    <h3>Jeffrey Bones</h3>
+    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/f06bf946eb169dec428f691c2757e5c2/jeffrey.jpg"  alt="joystick">
+    <div class="shadow bg-white rounded-3">  
+      <h5 >Project manager &amp; Scrum master. QA tester.</h5>    
+      <p >Is the team leader, always smiles. Never complains. src="https://pbs.twimg.com/media/CoOiVA1WYAEQsAy.jpg"</p>
+    </div>    
     </div>
-    <div style="height: 350px; font-family: Pixelify Sans, sans-serif;" class="col-6 shadow-lm text-center">
-      {% block content %}
-      <form method="post">
-          {% csrf_token %}
-          {{ form.as_p }}
-          
-          <button type="submit" class="btn btn-primary" data-bs-toggle="popover">Submit</button>
-      </form>
-      
-      {% endblock %}
-        
-    </div>
-    <div class="col"></div>
+  <div class="col text-center" style="height: 350px; max-width: 300px;font-family: Pixelify Sans, sans-serif;" >
+      <h3>Xabier Basabe</h3>
+      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/1cb0bae58ca995cd6b933bef09655761/xbasabe-.jpg" alt="joystick">
+      <p class="shadow bg-white rounded-3">Frontend. Pixel entusiast. src="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2020/12/GNG_new_game.jpg"</p>
+  </div>
+
 </div>
-<div class="row" style="height: 150px;">
+<div class="row" style="height: 250px;">
   
+
+<br><br>
 
   <!-- Footer -->
   <footer class="text-center text-white" style="background-color: #cd09d4">
