--- a/real_server/api/templates/playground.html
+++ b/real_server/api/templates/playground.html
@@ -1,27 +1,20 @@
-{% load crispy_forms_tags %}
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign in form</title>
+    <title>pong arena</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    </style>
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
-    <link rel="shortcut icon" type="image/ico" href="/static/images/favicon.ico">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-
-
 <body class="bg-info bg-gradient">
 
-<!-- Navbar -->
+  <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-white ">
   <div class="container-fluid" style="color: aqua;"> 
     <button
@@ -58,32 +51,34 @@
 </nav>
 <!-- Navbar -->
 
+    <h1 style="font-size:6vw; font-family: Tourney, sans-serif; color:aqua" class="d-flex justify-content-center">Pong Arena. Start!</h1>
+    
+   <!-- <div class="container img-fluid  rounded" style=" width: auto; background-image: url('https://png.pngtree.com/background/20250111/original/pngtree-hd-background-vibrant-pink-and-blue-retro-arcade-lines-texture-picture-image_13456981.jpg');">  -->
+        <div class="row img-fluid  rounded" style="height: 150px;">
+            <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua">Old school retro gaming</h3>
+        </div>
+        <div class="row  ">
+            <div class="col">
+                <img class="img-fluid" src="../../staticfiles/Sark.webp" alt="tron" style="margin-top: -50%;">
+            </div>
+            <div style="background-color: rgb(5, 5, 5); height: 350px;" class="col-8 shadow">
+                <p style="color: azure;">pong - pong</p>
+                <canvas id="gameCanvas" width="800" height="600">
+                    <script src="../../staticfiles/tournament.js"></script>
+                </canvas>
+                
+            </div>
+            <div class="col">
+                <img class="img-fluid" src="../../staticfiles/tron.png" alt="tron" style="margin-top: -50%;">
+            </div>
+        </div>
+        <div class="row" style="height: 150px;">
+        </div>
+    
+    <!-- </div>    -->
 
-  <div class="row " style="height: 150px;">
-    <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua; padding-top: 3%;">Sign in into Retropong</h3>
-</div>
-<div class="row  ">
-    <div class="col">
-      <img class="img-fluid justify-content-center" src="https://i.pinimg.com/474x/dd/e0/a7/dde0a784566eff4195f7cf5b29f7605d.jpg" alt="joystick">
-    </div>
-    <div style="height: 350px; font-family: Pixelify Sans, sans-serif;" class="col-6 shadow-lm text-center">
-      {% block content %}
-      <form method="post">
-          {% csrf_token %}
-          {{ form.as_p }}
-          
-          <button type="submit" class="btn btn-primary" data-bs-toggle="popover">Submit</button>
-      </form>
-      
-      {% endblock %}
-        
-    </div>
-    <div class="col"></div>
-</div>
-<div class="row" style="height: 150px;">
-  
-
-  <!-- Footer -->
+    
+     <!-- Footer -->
   <footer class="text-center text-white" style="background-color: #cd09d4">
     <!-- Grid container -->
     <div class="container">
@@ -166,10 +161,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-  
-  
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
-
