--- a/real_server/api/templates/tournament.html
+++ b/real_server/api/templates/tournament.html
@@ -84,7 +84,7 @@
         }
 
         // Llamamos a la función para cargar los jugadores al cargar la página
-        getPlayers();
+        //getPlayers();
     </script>
 </body>
 </html>
