--- a/real_server/api/templates/about.html
+++ b/real_server/api/templates/about.html
@@ -88,30 +88,39 @@
 <div class="row fit-content" style="display: flex; justify-content: space-around">
   <div class="col text-center" style="height: 350px; max-width: 300px; font-family: Pixelify Sans, sans-serif;">
     <h3>César Varela</h3>
-    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/53be5aefb6e0d9897f50ca4760232574/cvarela-.jpeg"  alt="joystick">
-    <p class="shadow bg-white rounded-3" >Bakcend. Monitoring survivor. src="https://ih1.redbubble.net/image.269457003.3660/raf,750x1000,075,t,FFFFFF:97ab1c12de.u3.jpg</p>
+    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/53be5aefb6e0d9897f50ca4760232574/cvarela-.jpeg"  alt="https://ih1.redbubble.net/image.269457003.3660/raf,750x1000,075,t,FFFFFF:97ab1c12de.u3.jpg">
+    <div class="shadow bg-white rounded-3">
+      <h5>Bakcend &amp; Monitoring survivor.</h5>
+      <p> Dockers tamer. Also known as the code breaker.</p>
+    </div>
   </div>
   <div class="col text-center" style="height: 350px; max-width: 300px;font-family: Pixelify Sans, sans-serif;" >
       <h3>Izar Arbaiza</h3>
-      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/3908a5634fc8a6bc0219aefba97cf8e6/iarbaiza.jpg" alt="joystick">
-      <p class="shadow bg-white rounded-3">IA gaming. Paddle algorythm. src="https://art.pixilart.com/d42430702bfd576.png"</p>
-  </div>
+      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/3908a5634fc8a6bc0219aefba97cf8e6/iarbaiza.jpg" alt="https://art.pixilart.com/d42430702bfd576.png">
+      <div class="shadow bg-white rounded-3">
+        <h5>IA gaming &amp; Paddle algorythm."</h5>  
+        <p>Will code for chocolate. Don't laugh, she can stab you.</p>
+      </div>
+    </div>
 
 </div>
 <br><br>
 <div class="row fit-content" style="display: flex; justify-content: space-around; margin-bottom: 8%;">
   <div class="col text-center" style="height: 350px; max-width: 300px; font-family: Pixelify Sans, sans-serif;">
     <h3>Jeffrey Bones</h3>
-    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/f06bf946eb169dec428f691c2757e5c2/jeffrey.jpg"  alt="joystick">
+    <img class="img-fluid  rounded-circle border border-5 border-white" style="height: 200px; width: 200px;" src="https://cdn.intra.42.fr/users/f06bf946eb169dec428f691c2757e5c2/jeffrey.jpg"  alt="https://pbs.twimg.com/media/CoOiVA1WYAEQsAy.jpg">
     <div class="shadow bg-white rounded-3">  
       <h5 >Project manager &amp; Scrum master. QA tester.</h5>    
-      <p >Is the team leader, always smiles. Never complains. src="https://pbs.twimg.com/media/CoOiVA1WYAEQsAy.jpg"</p>
+      <p >Is the team leader, always smiles. Never complains.</p>
     </div>    
     </div>
   <div class="col text-center" style="height: 350px; max-width: 300px;font-family: Pixelify Sans, sans-serif;" >
       <h3>Xabier Basabe</h3>
-      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/1cb0bae58ca995cd6b933bef09655761/xbasabe-.jpg" alt="joystick">
-      <p class="shadow bg-white rounded-3">Frontend. Pixel entusiast. src="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2020/12/GNG_new_game.jpg"</p>
+      <img class="img-fluid rounded-circle border border-5 border-white" style="height: 200px;" src="https://cdn.intra.42.fr/users/1cb0bae58ca995cd6b933bef09655761/xbasabe-.jpg" alt="https://static1.thegamerimages.com/wordpress/wp-content/uploads/2020/12/GNG_new_game.jpg">
+      <div class="shadow bg-white rounded-3">  
+        <h5 >Frontend &amp; Pixel enthusiast.</h5>
+        <p>The last mohican, the legends tells he made the first pool.</p>
+      </div>
   </div>
 
 </div>
