--- a/real_server/api/templates/register.html
+++ b/real_server/api/templates/register.html
@@ -66,7 +66,7 @@
     <div class="col">
       <img class="img-fluid justify-content-center" src="https://i.pinimg.com/474x/dd/e0/a7/dde0a784566eff4195f7cf5b29f7605d.jpg" alt="joystick">
     </div>
-    <div style="height: 350px; font-family: Pixelify Sans, sans-serif;" class="col-6 shadow-lm text-center">
+    <div style="height: 350px; font-family: Pixelify Sans, sans-serif; background-image: url();" class="col-6 shadow-lm text-center">
       {% block content %}
       <form method="post">
           {% csrf_token %}
