--- a/real_server/api/templates/playground.html
+++ b/real_server/api/templates/playground.html
@@ -12,11 +12,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body class="bg-info bg-gradient">
+<body class="bg-info bg-gradient" >
 
-  <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-white ">
-  <div class="container-fluid" style="color: aqua;"> 
+<!-- Navbar -->
+
+<nav class="navbar navbar-expand-lg border border-5 border-white" style="background: linear-gradient(
+  45deg,
+  hsla(168, 85%, 52%, 0.5),
+  hsla(263, 88%, 45%, 0.5) 100%
+)">
+  <div class="container-fluid" style="color: aqua; "> 
     <button
       data-mdb-collapse-init
       class="navbar-toggler"
@@ -57,19 +62,21 @@
         <div class="row img-fluid  rounded" style="height: 150px;">
             <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua">Old school retro gaming</h3>
         </div>
-        <div class="row  ">
+        <div class="row  " style="display: flex; justify-content: space-around; ">
             <div class="col">
-                <img class="img-fluid" src="../../staticfiles/Sark.webp" alt="tron" style="margin-top: -50%;">
+              <h2  style="margin-top: -45%; font-family: Tourney, sans-serif; text-align: center;" >Player One</h2>
+                <img class="img-fluid" src="../../staticfiles/Sark.webp" alt="tron" >
             </div>
-            <div style="background-color: rgb(5, 5, 5); height: 350px;" class="col-8 shadow">
+            <div style=" font-family: Tourney, sans-serif; margin-top: -8%; display: flex; justify-content: center; background-image: url(https://img.freepik.com/vector-gratis/fondo-abstracto-luces-neon_23-2148678937.jpg?semt=ais_hybrid&w=740) ; background-size: cover; background-position: center;" class="col-8 shadow">
                 <p style="color: azure;">pong - pong</p>
-                <canvas id="gameCanvas" width="800" height="600">
-                    <script src="../../staticfiles/tournament.js"></script>
-                </canvas>
+                <canvas class="border border-5 border-white" id="gameCanvas" width="600" height="600" style="background-color:black; margin-top: 5%; margin-bottom: 5%;">
+                    <script class="shadow" src="../../staticfiles/1vs1.js"></script></canvas>
+                
                 
             </div>
             <div class="col">
-                <img class="img-fluid" src="../../staticfiles/tron.png" alt="tron" style="margin-top: -50%;">
+                <h2  style="margin-top: -45%; font-family: Tourney, sans-serif;" >Player Two</h2>
+                <img class="img-fluid" src="../../staticfiles/tron.png" alt="tron" >
             </div>
         </div>
         <div class="row" style="height: 150px;">
