--- a/real_server/api/templates/tournament.html
+++ b/real_server/api/templates/tournament.html
@@ -49,8 +49,9 @@
     <div id="log"></div>
 
     <input type="hidden" id="tournamentId" value="1"> <!-- ID del torneo temporal -->
+
     <script src="../static/tournament.js"></script>
-    <script>
+    <!-- <script>
         // Supongamos que tenemos un tournament_id en algún lugar
         //const tournament_id = 1; // Este valor debería ser dinámico en un caso real
 
@@ -85,7 +86,7 @@
 
         // Llamamos a la función para cargar los jugadores al cargar la página
         //getPlayers();
-    </script>
+    </script> -->
 </body>
 </html>
 
