arcade machine version

--- a/real_server/api/templates/index.html
+++ b/real_server/api/templates/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body style="background-color: black;">
 <header>
     <!-- Intro settings -->
     <style>
@@ -50,18 +50,15 @@ h3 span {
     width:0;
     background: black;
     border-left: 1px solid #000;
-    animation: escribir 5s steps(50) infinite alternate;
+    animation: escribir 5s steps(51) infinite alternate;
 }
 
 @keyframes escribir {
     from { width: 100% }
     to { width:0 }
 }
+</style>
 
-    </style>
-  
-  https://images.pexels.com/photos/4836513/pexels-photo-4836513.jpeg
-  
     <!-- Background image -->
     <div
       id="intro-example"
@@ -88,7 +85,7 @@ h3 span {
               class="btn btn-outline-light btn-lg m-2"
               style="font-family: Pixelify Sans, sans-serif;"
               href="/register"
-              target="_self"
+              target="_blank"
               role="button"
             >Sign in</a>
           </div>
@@ -97,20 +94,142 @@ h3 span {
     </div>
     <!-- Background image -->
   </header>
-  <h3 class="mb-4" style="font-family: Pixelify Sans, sans-serif; background-color: black;">Try your best against an AI, another player or enroll a tournament <span>&#150;</span> </h3>
-
-  <div class="row justify-content-center" style=" max-width: 100%; height: auto;; font-family: Pixelify Sans, sans-serif;" class="shadow-lm text-center">
-    <img class="img-fluid " src="https://i.postimg.cc/3xfnTQjs/D-NQ-NP-941976-MLA26076900203-092017-O.jpg" alt="arcade game">
+  <div class="row " style="background-color: black; height: 40%; display: flex; flex-direction: row; justify-content: center;">
+    <h3 class="mb-4" style="font-family: Pixelify Sans, sans-serif; ">Try your best against an AI, another player or enroll a tournament  \<span>&#151;</span> </h3>
+  </div>
+  
+  <div class="row  " style="background-color: black ; display: flex; flex-direction: row; justify-content: space-around; align-items: center;">
+    <div class="col-md-6">
+        <img class="img-fluid" src="https://cdn.dribbble.com/userupload/23061258/file/original-bed35260fcc9b31c32143bd2b91925dd.gif" alt="arcade game machine" >
+    </div>
+    <div style=" font-family: Honk, system-ui; display: flex; justify-content: center; max-width: 500px;"  class="col-8 shadow">
+        <h3>Retropong project, the old school arcade experience brougth to live. Pixel is cool dude!</h3>
+    </div>
+    <div class="col">
+    </div>
   </div>
 
-  https://cdn.mos.cms.futurecdn.net/xQmFxCSLFhkDbYG4m6E5x3.png
+  <div class="row  " style="background-color: black ; display: flex; flex-direction: row; justify-content: space-around; align-items: center; height: 500px;">
     
-    <div class="container mt-3">
-        <h1>¡Hola desde mi página simple!</h1>
-        <p class="lead">Este es un ejemplo de contenido HTML básico con Bootstrap.</p>
-        <button class="btn btn-primary">Botón Primario de Bootstrap</button>
+    <div style=" font-family: Honk, system-ui; display: flex; justify-content: center; max-width: 500px;"  class="col-8 shadow">
+        <h3>80s gaming because Pixel is cool dude!</h3>
     </div>
+    <div class="col-md-6" style="height: 500px; justify-content: center; background-image: url(https://i.postimg.cc/3xfnTQjs/D-NQ-NP-941976-MLA26076900203-092017-O.jpg); background-size: cover;">
+    </div>
+    
+  </div>
 
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Sign in form</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h2>Form goes here</h2>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Sign</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Footer -->
+  <footer class="text-center text-white" style="background-color: #cd09d4">
+    <!-- Grid container -->
+    <div class="container">
+      <!-- Section: Links -->
+      <section class="mt-5">
+        <!-- Grid row-->
+        <div class="row text-center d-flex justify-content-center pt-3" style="font-family: Honk, system-ui; font-size: 50%;">
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="/about" class="text-white" style="text-decoration: none;">About us</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="/playground" class="text-white" style="text-decoration: none;">Play</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="/register" class="text-white" style="text-decoration: none;">Sign in</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white" style="text-decoration: none;">Help</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!" class="text-white" style="text-decoration: none;">Contact</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+      <hr class="my-5" />
+
+      <!-- Section: Text -->
+      <section class="mb-5">
+        <div class="row d-flex justify-content-center pt-3">
+          <div class="col-lg-10">
+            <p style="font-family: Honk, system-ui; font-size: 30px;">
+              Lorem ipsum transcendeces sit amet retropong adipisicing arcade. Sunt pong arena repellat quaerat voluptatibus placeat nam,
+              commodi optio pariatur est quia magnam eum harum corrupti dicta, aliquam sequi voluptate quas.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Section: Text -->
+
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+         class="text-center p-3"
+         style="background-color: rgba(0, 0, 0, 0.2)"
+         >
+      © 2025 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/"
+         >Retropong</a
+        >
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Qi+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
