--- a/real_server/api/templates/playground_copy.html
+++ b/real_server/api/templates/playground_copy.html
@@ -64,26 +64,35 @@
     </div>
   </div>
 </nav>
-<!-- Navbar -->    
-
-https://i.etsystatic.com/12076554/r/il/961a7f/2402228954/il_1588xN.2402228954_6e1g.jpg
+<!-- Navbar -->
 
     <h1 style="font-size:6vw; font-family: Tourney, sans-serif; color:aqua" class="d-flex justify-content-center">Pong Arena. Start!</h1>
     
-        <div class="row img-fluid  rounded">
+   <!-- <div class="container img-fluid  rounded" style=" width: auto; background-image: url('https://png.pngtree.com/background/20250111/original/pngtree-hd-background-vibrant-pink-and-blue-retro-arcade-lines-texture-picture-image_13456981.jpg');">  -->
+        <div class="row img-fluid  rounded" style="height: 150px;">
             <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua">Old school retro gaming</h3>
         </div>
-        <div class="row  " style="display: flex; justify-content: space-around; height: 1850px;  ">
-            <div class="col"></div>
-            <div style=" font-family: Tourney, sans-serif; margin-top: 23%; display: flex; justify-content: center; background-image: url('https://us.123rf.com/450wm/tetsuobuseteru/tetsuobuseteru1701/tetsuobuseteru170100005/68319422-m%C3%A1quina-de-juego-de-arcade-retro-ilustraci%C3%B3n-del-vector.jpg'); background-size:cover;" class="col-8 shadow display: flex; flex-direction: row">
-              <h1 style="font-size:4vw; font-family: 'Press Start 2P', system-ui; color:aqua" class="d-flex text-center padding: 80%">Pong. Start!</h1>
-              <canvas class="border border-5 border-white" id="gameCanvas"  style="width:60%; height: 40%; background-color:black;">
-                   
-                  <script type="text/javascript" src="../../staticfiles/1vs1.js"></script></canvas>
+        <div class="row  " style="display: flex; justify-content: space-around; ">
+            <div class="col">
+              <h2  style="margin-top: -45%; font-family: Tourney, sans-serif; text-align: center;" >Player One</h2>
+                <img class="img-fluid" src="../../staticfiles/Sark.webp" alt="tron" >
             </div>
-            <div class="col"></div>
+            <div style=" font-family: Tourney, sans-serif; margin-top: -8%; display: flex; justify-content: center; background-image: url(https://img.freepik.com/vector-gratis/fondo-abstracto-luces-neon_23-2148678937.jpg?semt=ais_hybrid&w=740) ; background-size: cover; background-position: center;" class="col-8 shadow">
+                <p style="color: azure;">pong - pong</p>
+                <canvas class="border border-5 border-white" id="gameCanvas" width="600" height="600" style="background-color:black; margin-top: 5%; margin-bottom: 5%;">
+                    <script class="shadow" src="../../staticfiles/1vs1.js"></script></canvas>
+                
+                
+            </div>
+            <div class="col">
+                <h2  style="margin-top: -45%; font-family: Tourney, sans-serif;" >Player Two</h2>
+                <img class="img-fluid" src="../../staticfiles/tron.png" alt="tron" >
+            </div>
         </div>
-
+        <div class="row" style="height: 150px;">
+        </div>
+    
+    <!-- </div>    -->
 
 <div class="row"> <button class="border border-5  rounded-circle" style="height: 110px; width: 110px; background-color:rgba(174, 13, 13, 0.966); border-color: rgba(100, 4, 4, 0.771) ;font-family: 'Press Start 2P', system-ui;">Play</button></div>
 
