--- a/real_server/api/templates/playground.html
+++ b/real_server/api/templates/playground.html
@@ -60,8 +60,8 @@
 
 <nav class="navbar navbar-expand-lg border border-5 border-white" style="background: linear-gradient(
   45deg,
-  hsla(168, 85%, 52%, 0.5),
-  hsla(263, 88%, 45%, 0.5) 100%
+  hsla(168, 85%, 52%, 0.8),
+  hsla(263, 88%, 45%, 0.7) 100%
 )">
   <div class="container-fluid" style="color: aqua; "> 
     <button
@@ -131,8 +131,8 @@
               45deg,
               hsla(168, 85%, 52%, 0.5),
               hsla(263, 88%, 45%, 0.7) 75%);  border-radius: 10px;
-              height: 200px">
-              <h1 style="font-family: 'Press Start 2P', system-ui; color: white; padding-top: 10px;">2UP</h1>
+              height: 200px;">
+              <h1 style="font-family: 'Press Start 2P', system-ui; color: white;">2UP</h1>
               <h5 style="font-family: 'Press Start 2P', system-ui; color:white">[player 2 name]</h5>
             </div>
             </div>
@@ -146,8 +146,8 @@
             <div class="col"></div>
             <div class="col-2 border-5 border-white" style="background: linear-gradient(
               45deg,
-              hsla(0, 0%, 4%, 0.5),
-              hsla(22, 100%, 49%, 0.7) 75%);  border-radius: 10px;">
+              hsla(120, 95%, 47%, 0.6),
+              hsla(22, 100%, 49%, 0.8) 75%);  border-radius: 10px; padding: 15px 0px 15px 15px; justify-content: space-around;">
                 <button id="startButton" class="arcade_botton border border-5  rounded-circle" style=" margin-left: 15px;">Start</button>
                 <script>document.getElementById("startButton").addEventListener("click", () => {isPaused = !isPaused; music.play();});
                 </script>
