--- a/real_server/api/templates/register.html
+++ b/real_server/api/templates/register.html
@@ -1,12 +1,14 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign in form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.js" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -34,11 +36,11 @@
 
 <nav class="navbar navbar-expand-lg border border-5 border-white" style="background: linear-gradient(
   45deg,
-  hsla(168, 85%, 52%, 0.5),
-  hsla(263, 88%, 45%, 0.5) 100%
+  hsla(168, 85%, 52%, 0.8),
+  hsla(263, 88%, 45%, 0.7) 100%
 )">
   <div class="container-fluid" style="color: aqua; "> 
-    <button
+    <button 
       data-mdb-collapse-init
       class="navbar-toggler"
       type="button"
@@ -80,21 +82,24 @@
 <div class="row  ">
     <div class="col"></div>
     <div style="background-color: black ;color: whitesmoke; height: 350px; font-family: Pixelify Sans, sans-serif; background-image: url('../../staticfiles/oie_transparent.png'); background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 10px;" class="col-3 shadow-lm text-center border-5 border-white">
-      {% block content %}
-      <form method="post" style="background-color: black;">
-          {% csrf_token %}
-          {{ form.as_p }}
-          
-          <button type="submit" class="btn btn-primary" data-bs-toggle="popover">Submit</button>
-      </form>
-      
-      {% endblock %}
+      <div class="container py-5">
+        {% block content %}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            
+            <button type="submit" class="btn btn-primary" data-bs-toggle="popover">Submit</button>
+        </form>
+        
+        {% endblock %}
+      </div>
         
     </div>
     <div class="col"></div>
 </div>
 <br><br><br><br>
 <div class="row" style="height: 150px;">
+  
   
 
 <!-- Footer -->
@@ -182,7 +187,7 @@
 <!-- Footer -->
 
   
-  
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
   </body>
 
