--- a/real_server/api/templates/select.html
+++ b/real_server/api/templates/select.html
@@ -42,7 +42,10 @@
   * {
   box-sizing: border-box;
 }
+</style>
 
+
+<style>
 body {
   margin: 0;
   padding: 0;
@@ -65,6 +68,16 @@ video {
 
 </style>
 
+<style>
+  .footer_nav{
+    text-decoration: none;
+    font-size: 35px;
+  }
+  .footer_nav:hover{
+    text-decoration:dotted;
+    font-size: 40px;
+  }
+</style>
 
 <body>
 
@@ -120,7 +133,7 @@ https://us.123rf.com/450wm/tetsuobuseteru/tetsuobuseteru1701/tetsuobuseteru17010
   <video autoplay loop muted>
     <source src="https://www.shutterstock.com/shutterstock/videos/3467987197/preview/stock-footage--k-abstract-pixel-animation-multicolored-digital-background-geometric-of-square-pattern-moving-with.webm" type="video/webm">
   </video>
-  <div class="row " style="height: 7vw; ">
+  <div class="row " style="height: 10vw; ">
     <h1 style="font-size:4vw; font-family: Tourney, sans-serif; color:aqua;" class="d-flex justify-content-center " >Select game choice</h1>
   </div>
   <div class="row fit-content" style="display: flex; justify-content: space-around;">
@@ -145,89 +158,89 @@ https://us.123rf.com/450wm/tetsuobuseteru/tetsuobuseteru1701/tetsuobuseteru17010
 
 
 
-  <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: black; margin-top: -8%;">
-    <!-- Grid container -->
-    <div class="container">
-      <!-- Section: Links -->
-      <section class="mt-5">
-        <!-- Grid row-->
-        <div class="row text-center d-flex justify-content-center pt-3" style="font-family: Honk, system-ui; font-size: 50%;">
-          <!-- Grid column -->
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="/about" class="text-white" style="text-decoration: none;">About us</a>
-            </h6>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="/playground" class="text-white" style="text-decoration: none;">Play</a>
-            </h6>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="/register" class="text-white" style="text-decoration: none;">Sign in</a>
-            </h6>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white" style="text-decoration: none;">Help</a>
-            </h6>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white" style="text-decoration: none;">Contact</a>
-            </h6>
-          </div>
-          <!-- Grid column -->
+<!-- Footer -->
+<footer class="text-center text-white" style="margin-top: -50px ;background-image: url('https://cdn.dribbble.com/userupload/28311765/file/original-b3d1b68257e6c14b3eca96fc95f0649c.gif');background-repeat: no-repeat; background-size: cover ;background-position: center center;";> <!--  #cd09d4 -->
+  <!-- Grid container -->
+  <div class="container">
+    <!-- Section: Links -->
+    <section class="mt-5" style="height: 50px;">
+      <!-- Grid row-->
+      <div class="row text-center d-flex justify-content-center pt-3" style="font-family: Honk, system-ui;">
+        <!-- Grid column -->
+        <div class="col-md-2">
+          <h6 class="footer_nav">
+            <a href="/index">Home</a>
+          </h6>
         </div>
-        <!-- Grid row-->
-      </section>
-      <!-- Section: Links -->
+        <!-- Grid column -->
 
-      <hr class="my-5" />
-
-      <!-- Section: Text -->
-      <section class="mb-5">
-        <div class="row d-flex justify-content-center pt-3">
-          <div class="col-lg-10">
-            <p style="font-family: Honk, system-ui; font-size: 30px;">
-              Lorem ipsum transcendeces sit amet retropong adipisicing arcade. Sunt pong arena repellat quaerat voluptatibus placeat nam,
-              commodi optio pariatur est quia magnam eum harum corrupti dicta, aliquam sequi voluptate quas.
-            </p>
-          </div>
+        <!-- Grid column -->
+        <div class="col-md-2">
+          <h6 class="footer_nav">
+            <a href="/playground">Play</a>
+          </h6>
         </div>
-      </section>
-      <!-- Section: Text -->
+        <!-- Grid column -->
 
-    </div>
-    <!-- Grid container -->
+        <!-- Grid column -->
+        <div class="col-md-2">
+          <h6 class="footer_nav">
+            <a href="/register">Sign in</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
 
-    <!-- Copyright -->
-    <div
-         class="text-center p-3"
-         style="background-color: rgba(0, 0, 0, 0.2)"
-         >
-      © 2025 Copyright:
-      <a class="text-white" href="/about"
-         >Retropong</a
-        >
-    </div>
-    <!-- Copyright -->
-  </footer>
-  <!-- Footer -->
+        <!-- Grid column -->
+        <div class="col-md-2">
+          <h6 class="footer_nav">
+            <a href="/select.html">Select</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2">
+          <h6 class="footer_nav">
+            <a href="/about.html">About us</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row-->
+    </section>
+    <!-- Section: Links -->
+
+    <hr class="my-2" />
+
+    <!-- Section: Text -->
+    <section class="mb-5">
+      <div class="row d-flex justify-content-center pt-3">
+        <div class="col-lg-10">
+          <p style="font-family: Honk, system-ui; font-size: 30px;">
+            Lorem ipsum transcendeces sit amet retropong adipisicing arcade. Sunt pong arena repellat quaerat voluptatibus placeat nam,
+            commodi optio pariatur est quia magnam eum harum corrupti dicta, aliquam sequi voluptate quas.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Section: Text -->
+
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div
+       class="text-center p-3"
+       style="background-color: rgba(0, 0, 0, 0.2)"
+       >
+    © 2025 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/"
+       >Retropong</a
+      >
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
   
   
 
