--- a/real_server/api/templates/playground.html
+++ b/real_server/api/templates/playground.html
@@ -98,7 +98,11 @@
 </nav>
 <!-- Navbar -->    
 
-<body style="background-image:url('../../staticfiles/fullscreen.png'); background-repeat: no-repeat; background-size: cover;">
+<!--
+<body style="background-image: url('../../staticfiles/fullscreen.png'); background-repeat: no-repeat; background-size: cover;">
+-->
+<body style="background-image: url('https://kingdomofhart.wordpress.com/wp-content/uploads/2014/08/smashwall.jpg'); background-repeat: no-repeat; background-size: cover;">
+  
         
        
         <div class="row  " style=" display: flex; justify-content: center; height: 700px;">
@@ -208,7 +212,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="footer_nav">
-              <a href="/select.html">Select</a>
+              <a href="/select">Select</a>
             </h6>
           </div>
           <!-- Grid column -->
@@ -216,7 +220,7 @@
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="footer_nav">
-              <a href="/about.html">About us</a>
+              <a href="/about">About us</a>
             </h6>
           </div>
           <!-- Grid column -->
