--- a/real_server/api/templates/register.html
+++ b/real_server/api/templates/register.html
@@ -76,15 +76,18 @@
 
 <body style="background-image: url('https://i.pinimg.com/474x/76/d4/84/76d484a3538b24a114e941dbe586e1a5.jpg');background-repeat: no-repeat; background-size: cover; background-position: center bottom;"></body>
 
-  <div class="row " style="height: 150px;">
-    <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:aqua; padding-top: 3%;">Sign in and become a retrogamer</h3>
-</div>
+ <!-- <div class="row " style="height: 150px;">
+    <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:rgb(7, 8, 8); padding-top: 3%;">Sign in and become a retrogamer</h3>
+</div> -->
+<br><br>
 <div class="row  ">
     <div class="col"></div>
     <div style="background-color: black ;color: whitesmoke; height: 350px; font-family: Pixelify Sans, sans-serif; background-image: url('../../staticfiles/oie_transparent.png'); background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 10px;" class="col-3 shadow-lm text-center border-5 border-white">
-      <div class="container py-5">
+      
+      <div class="container py-3">
+        <h5 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:rgb(84, 201, 201)">Sign in and become a retrogamer</h5>
         {% block content %}
-        <form method="post">
+        <form id="registerForm" method="post" onsubmit="return closeWindow()">
             {% csrf_token %}
             {{ form.as_p }}
             
@@ -99,6 +102,13 @@
 </div>
 <br><br><br><br>
 <div class="row" style="height: 150px;">
+  
+<script>
+  function closeWindow() {
+  window.close();
+  return true;
+}
+</script>
   
   
 
