--- a/real_server/api/templates/select.html
+++ b/real_server/api/templates/select.html
@@ -8,7 +8,6 @@
       @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Press+Start+2P:wght@400&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     </style>
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
     <link rel="shortcut icon" type="image/ico" href="/static/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="../../staticfiles/rest_framework/css/team.css">
     <!-- Bootstrap CSS -->
@@ -201,7 +200,7 @@ https://us.123rf.com/450wm/tetsuobuseteru/tetsuobuseteru1701/tetsuobuseteru17010
         <!-- Grid column -->
         <div class="col-md-2">
           <h6 class="footer_nav">
-            <a href="/about.html">About us</a>
+            <a href="/about">About us</a>
           </h6>
         </div>
         <!-- Grid column -->
