Actualización de: real_server/api/__pycache__/__init__.cpython-311.pyc real_server/api/__pycache__/admin.cpython-311.pyc real_server/api/__pycache__/apps.cpython-311.pyc real_server/api/__pycache__/models.cpython-311.pyc real_server/api/__pycache__/serializers.cpython-311.pyc real_server/api/__pycache__/urls.cpython-311.pyc real_server/api/__pycache__/views.cpython-311.pyc real_server/api/migrations/__pycache__/0001_initial.cpython-311.pyc real_server/api/migrations/__pycache__/__init__.cpython-311.pyc real_server/api/static/1vs1.js real_server/api/templates/playground.html real_server/elastic.crt real_server/elastic.key real_server/ft_transcendence_backend/__pycache__/__init__.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/settings.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/urls.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/wsgi.cpython-311.pyc real_server/pages/Dockerfile real_server/pages/__pycache__/__init__.cpython-311.pyc real_server/pages/__pycache__/forms.cpython-311.pyc real_server/pages/__pycache__/views.cpython-311.pyc  [07/07/2025 20:24]

--- a/real_server/api/templates/playground.html
+++ b/real_server/api/templates/playground.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -123,10 +124,9 @@
 
             <div style=" font-family: Tourney, sans-serif; height: 650px; display: flex; justify-content: center; background-size:contain; background-position: center top; background-repeat: no-repeat" class="col-7 shadow display: flex; flex-direction: row">
               <canvas class=" border border-5 border-white " id="gameCanvas"  style=" margin-top: 10% ; width:90%; height: 90%; background-color:black; border-radius: 20px;">
-                   
-                  <script type="text/javascript" src="../../staticfiles/1vs1.js"></script>
-                </canvas>
+                </canvas>	
             </div>
+			<script src="{% static '1vs1.js' %}"></script>
             <div class="col-md-2 text-center " style="margin-top: 10%; justify-content: end;">
               
               <img src="../../staticfiles/avatar2.jpg" alt="player two avatar" width="200" height="200">
