funciona pero no funciona, views.py incompleto o erroneo en funcion tournament_results

--- a/real_server/api/templates/index.html
+++ b/real_server/api/templates/index.html
@@ -208,6 +208,14 @@ function openRegister() {
           <!-- Grid column -->
           <div class="col-md-2">
             <h6 class="footer_nav">
+              <a href="/tournament">Tournament</a> //!!
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2">
+            <h6 class="footer_nav">
               <a href="/register">Sign in</a>
             </h6>
           </div>
